Fix the lifter name getting cut off in the LiftingHeader

--- a/src/components/lifting/LiftingHeader.module.scss
+++ b/src/components/lifting/LiftingHeader.module.scss
@@ -23,12 +23,6 @@ $color-light: #ffffff;
 
 $border-rounding: 8px;
 
-@mixin handle-text-overflow() {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
 // The bar containing the lifter information.
 div.header {
   display: flex;
@@ -47,18 +41,21 @@ div.header {
   border-radius: $border-rounding;
   box-shadow: 0 0 20px 0 hsla(0, 0%, 64%, .45);
 
+  white-space: nowrap;
 }
 
 // The call-out for the lifter name.
 div.lifterName {
-  @include handle-text-overflow();
   font-size: 60px;
   font-weight: bold;
 }
 
 // Remaining info to the right of the lifterName.
 div.info {
-  @include handle-text-overflow();
   font-size: 42px;
   margin-left: 16px;
+
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
